# cross-media-measurement-api

./: .bazelrc  MODULE.bazel  WORKSPACE
.github/workflows/: api-lint.yml  build-test.yml  lint.yml
docs/: certificates.md  mc_creation_flow.md
docs/diagrams/: account_activation.pu  api_resources.pu  mc_creation_flow.pu  measurement_consumer_creation.pu  new_mc_account_creation_flow.pu  new_measurement_consumer_account_creation.pu  owned_measurement_consumer_account_creation.pu
docs/panelmatch/: example-exchange-workflow.textproto  exchange-workflows.md
src/main/proto/: api-linter.yaml
src/main/proto/wfa/measurement/api/v2alpha/: BUILD.bazel  account.proto  accounts_service.proto  ad_account.proto  ad_accounts_service.proto  api_key.proto  api_keys_service.proto  certificate.proto  certificates_service.proto  client_account.proto  client_accounts_service.proto  crypto.proto  data_provider.proto  data_provider_impression_query.proto  data_provider_impression_validation.proto  data_providers_service.proto  date_interval.proto  differential_privacy.proto  direct_computation.proto  duchy.proto  edp_impression_validation.proto  encrypted_sketch.proto  event_annotations.proto  event_field.proto  event_group.proto  event_group_activities_service.proto  event_group_activity.proto  event_group_activity_interval.proto  event_group_chain.proto  event_group_field.proto  event_group_metadata.proto  event_group_metadata_descriptor.proto  event_group_metadata_descriptors_service.proto  event_groups_service.proto  event_template.proto  exchange.proto  exchange_step.proto  exchange_step_attempt.proto  exchange_step_attempts_service.proto  exchange_steps_service.proto  (+49 more)
src/main/proto/wfa/measurement/api/v2alpha/common/: BUILD.bazel  time_interval.proto
src/main/proto/wfa/measurement/taxonomy/origin/: BUILD.bazel  event_templates.proto  event_types.proto
src/main/proto/wfa/measurement/type/: BUILD.bazel  README.md  future_disposition.proto
tools/: api-lint
