module(
    name = "cross_media_measurement_api",
    repo_name = "wfa_measurement_proto",
)

bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "googleapis",
    version = "0.1.0-rc1",
)

googleapis = use_extension("@googleapis//extensions:googleapis.bzl", "googleapis")
use_repo(googleapis, "com_google_googleapis")

repo_targets = use_extension("@googleapis//extensions:repo_targets.bzl", "repo_targets")
use_repo(repo_targets, "com_google_googleapis_imports")

non_module_deps = use_extension("//build:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "plantuml")
