module(
    name = "cross-media-measurement-api",
    repo_name = "wfa_measurement_proto",
)

# Bazel Central Registry deps.
bazel_dep(
    name = "protobuf",
    version = "29.3",
    repo_name = "com_google_protobuf",
)

# WFA registry deps.
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20250120-318818b.bzlmod.2",
    repo_name = "com_google_googleapis",
)

non_module_deps = use_extension("//build:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "plantuml")
