load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//src/main/proto/wfa/measurement/api/v2alpha:__pkg__"])

IMPORT_PREFIX = "/src/main/proto"

# Common resources and message types.

proto_library(
    name = "time_interval_proto",
    srcs = ["time_interval.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
